Apply hover mixin to prevent hover events from sticking on mobile devices

--- a/src/styles/components/_mixins.scss
+++ b/src/styles/components/_mixins.scss
@@ -38,6 +38,12 @@
 }
 
 // media queries
+@mixin hover {
+    @media (hover: hover) {
+        @content;
+    }
+}
+
 @mixin mobile {
     @media (min-width: #{$mobile-width}) {
         @content;
